# battery-php-ext

./: CMakeLists.txt  README.md  android_battery.c  composer.json  config.m4  config.w32  example.php  linux_battery.c  mac_battery.c  php_battery.c  windows_battery.c
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
android-test-app/: settings.gradle
android-test-app/app/: build.gradle
android-test-app/app/src/main/: AndroidManifest.xml
android-test-app/app/src/main/cpp/: CMakeLists.txt  android_battery.c  native-lib.c
android-test-app/app/src/main/java/com/example/: Battery.java
android-test-app/app/src/main/java/com/example/batterytest/: MainActivity.java
include/: battery_common.h
tests/: test_battery.php
